tests/baselines/reference/emitArrowFunctionES6.errors.txt
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionES6.ts(10,11): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionES6.ts(12,11): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionES6.ts(14,11): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionES6.ts(19,12): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/arrowFunction/emitArrowFunctionES6.ts (4 errors) ====
    var f1 = () => { }
    var f2 = (x: string, y: string) => { }
    var f3 = (x: string, y: number, ...rest) => { }
    var f4 = (x: string, y: number, z=10) => { }
    function foo(func: () => boolean) { }
    foo(() => true);
    foo(() => { return false; });
    
    // Binding patterns in arrow functions
    var p1 = ([a]) => { };
              ~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    var p2 = ([...a]) => { };
    var p3 = ([, a]) => { };
              ~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    var p4 = ([, ...a]) => { };
    var p5 = ([a = 1]) => { };
              ~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    var p6 = ({ a }) => { };
    var p7 = ({ a: { b } }) => { };
    var p8 = ({ a = 1 }) => { };
    var p9 = ({ a: { b = 1 } = { b: 1 } }) => { };
    var p10 = ([{ value, done }]) => { };
               ~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    